# MyCppProjects

./: .gitignore  README.md  binary_search.cpp  majority_element.cpp  tempCodeRunnerFile.cpp
C_w_pointers/: CMakeLists.txt  hello_world.c
Change Money/: CMakeLists.txt  changeMoney  changeMoney.cpp  change_dp.cpp
Covering_Segement/: CMakeLists.txt  covering_segment.cpp
CreateStudent/: CMakeLists.txt  main.cpp
Different_summands/: CMakeLists.txt  different_summands.cpp
DynamicProgramming/: CMakeLists.txt  change_dp  longest_common_subsequence.cpp  primitive_calculator.cpp
Edit_Distance/: CMakeLists.txt  edit_distance  edit_distance.cpp  edit_distance_2.cpp  edit_distance_3.cpp
Employee/: CMakeLists.txt  employee.cpp
FiboNumbers/: CMakeLists.txt  fibonacci  fibonacci.cpp  fibonacci_huge_number.cpp  fibonacci_last_digit.cpp  fibonacci_partial_sum.cpp  fibonacci_sum_last_digit.cpp
Fractional Knapsack/: CMakeLists.txt  fractionalKnapsack.cpp
GCD_and LCM/: CMakeLists.txt  gcd.cpp  lcm.cpp
Knapsack/: CMakeLists.txt  knapsack.cpp  knapsack_2.cpp  partition_souvenir_3.cpp  placing_parentheses.cpp
LargestProductOfDigits/: CMakeLists.txt  largestProductOfDigits  largestProductOfDigits.cpp
Largest_number/: CMakeLists.txt  largest_number.cpp
LinearSearchRecursive/: CMakeLists.txt  linear_search_recursive.cpp  tempCodeRunnerFile.cpp
Linux_Device_Drivers/: ..module-common.o.cmd  .Module.symvers.cmd  .hello_world.ko.cmd  .hello_world.mod.o.cmd  .hello_world.o.cmd  MOK.der  MOK.priv  Makefile  hello_world.c  hello_world.ko
Longest_Common_Subsequence/: CMakeLists.txt  lcs2.cpp  lcs3.cpp
MaxPairwiseProduct/: CMakeLists.txt  createdataset.cpp  maxpairwiseproduct.cpp  maxpairwiseproduct2  maxpairwiseproduct2.cpp
MaximunDotProduct/: CMakeLists.txt  maximunDotProduct.cpp
Multithreading/Pthreads/: CMakeLists.txt  simple_pthreads.cpp
Multithreading/Simple_threads/: CMakeLists.txt  simple_threads.cpp
Multithreading/Synchronization/: CMakeLists.txt  synchronization  synchronization.cpp
Networking/: server  server02  server02.c  server_01.cpp
NeuralNetwork/: CMakeLists.txt  neuralnetwork.cpp
Primitive_Calculator/: CMakeLists.txt
Sorting/: CMakeLists.txt  closestPairOfPoints  closestPairOfPoints.cpp  inversions  inversions.cpp  points_and_segments.cpp  quicksort.cpp  sorting.cpp  sorting3.cpp
TestOpenCV/: CMakeLists.txt  main.cpp
TestWxWidgets/: CMakeLists.txt  main.cpp
Thermostat/: CMakeLists.txt  main.cpp
build-Thermostat-Desktop-Debug/: CMakeCache.txt  Makefile  Thermostat.cbp
build-Thermostat-Desktop-Debug/config.tests/static_link_order/: CMakeCache.txt  Makefile
opc_ua/: CMakeLists.txt  opc_ua_test.c
