cmake_minimum_required(VERSION 3.0.0)
project(fibonacci VERSION 0.1.0)


add_executable(fibonacci fibonacci.cpp)
add_executable(fibonacci_last_digit fibonacci_last_digit.cpp)
add_executable(fibonacci_huge_number fibonacci_huge_number.cpp)
add_executable(fibonacci_sum_last_digit fibonacci_sum_last_digit.cpp)
add_executable(fibonacci_partial_sum fibonacci_partial_sum.cpp)

